--- a/python-e3-testsuite/PKGBUILD
+++ b/python-e3-testsuite/PKGBUILD
@@ -1,7 +1,8 @@
-# Maintainer: Pierre-Marie de Rodat  <pmderodat@kawie.fr>
+# Maintainer: Jamison Lahman <jamison+aur@lahman.dev>
+# Contributor: Pierre-Marie de Rodat  <pmderodat@kawie.fr>
 
 pkgname='python-e3-testsuite'
-pkgver='24.0'
+pkgver=27.2
 pkgrel=1
 pkgdesc="Generic Testsuite Driver in Python"
 
@@ -10,18 +11,15 @@ url="https://github.com/AdaCore/e3-testsuite"
 license=('GPL3')
 
 depends=('python-e3-core')
-makedepends=('python-setuptools')
+makedepends=('python-pip')
 
-_name='e3-testsuite'
-source=("https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
-sha512sums=('5fdd8bd70c9b7b94685462f6a04444fd2ebdd9fb0cc9b4dab0cad9a195272ba961cf6d42687d1df9784f1fa542de64bdd9d50f1dcb7c6ff8fcc60e3219be89b5')
-
-build() {
-    cd "$srcdir/$_name-$pkgver"
-    python setup.py build
-}
+_name='e3_testsuite'
+source=(
+  "https://files.pythonhosted.org/packages/b7/1b/a7da16a13b13f6b0ae77fb658f8470d465b569842a79a84469ffbc7273e5/$_name-$pkgver-py3-none-any.whl"
+)
+sha256sums=('ba162cc37c12ea011650975b522df828e74940ce46a20adf97ee352bc2072fc0')
 
 package() {
-    cd "$srcdir/$_name-$pkgver"
-    python setup.py install --root="$pkgdir/" --optimize=1 --skip-build
+    cd "$srcdir/$_name-$pkgver" || exit
+    python -m pip install --root="$pkgdir/" --no-deps --ignore-installed "${srcdir}/${source[0]##*/}"
 }
