commonize variables, include python in depends

--- a/python-e3-testsuite/PKGBUILD
+++ b/python-e3-testsuite/PKGBUILD
@@ -2,20 +2,20 @@
 # Contributor: Pierre-Marie de Rodat  <pmderodat@kawie.fr>
 
 pkgname='python-e3-testsuite'
+_pkgname=${pkgname#python-}
 pkgver=27.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Generic Testsuite Driver in Python"
 
 arch=('any')
 url="https://github.com/AdaCore/e3-testsuite"
 license=('GPL3')
 
-depends=('python-e3-core')
+depends=('python' 'python-e3-core')
 makedepends=('python-pip')
 
-_name='e3-testsuite'
 source=(
-  "https://files.pythonhosted.org/packages/py3/${_name::1}/$_name/${_name/-/_}-$pkgver-py3-none-any.whl"
+  "https://files.pythonhosted.org/packages/py3/${_pkgname::1}/$_pkgname/${_pkgname/-/_}-$pkgver-py3-none-any.whl"
 )
 sha256sums=('ba162cc37c12ea011650975b522df828e74940ce46a20adf97ee352bc2072fc0')
 
