--- a/truss/PKGBUILD
+++ b/truss/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: gomanager <gomanager@generated>
 pkgname=truss
 pkgver=0.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Truss helps you build go-kit microservices without having to worry about writing or maintaining boilerplate code."
 arch=('x86_64' 'aarch64')
 url="https://github.com/metaverse/truss"
@@ -18,13 +18,13 @@ build() {
     -mod=readonly \
     -modcacherw \
     -ldflags='-s -w' \
-    -o $pkgname \
+    -o cmd/truss/$pkgname \
     ./cmd/truss
 }
 
 package() {
   cd "$pkgname" || exit
-  install -Dm 755 $pkgname -t "$pkgdir/usr/bin"
+  install -Dm 755 cmd/truss/$pkgname -t "$pkgdir/usr/bin"
   install -Dm 644 LICENSE.md -t "$pkgdir/usr/share/licenses/$pkgname"
   install -Dm 644 README.md -t "$pkgdir/usr/share/doc/$pkgname"
 }
