--- a/goben/PKGBUILD
+++ b/goben/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: gomanager <gomanager@generated>
 pkgname=goben
 pkgver=1.0.2
-pkgrel=1
+pkgrel=2
 pkgdesc="goben is a golang tool to measure TCP/UDP transport layer throughput between hosts."
 arch=('x86_64' 'aarch64')
 url="https://github.com/udhos/goben"
@@ -18,13 +18,13 @@ build() {
     -mod=readonly \
     -modcacherw \
     -ldflags='-s -w' \
-    -o $pkgname \
+    -o ./cmd/goben/$pkgname \
     ./cmd/goben
 }
 
 package() {
   cd "$pkgname" || exit
-  install -Dm 755 $pkgname -t "$pkgdir/usr/bin"
+  install -Dm 755 cmd/goben/$pkgname -t "$pkgdir/usr/bin"
   install -Dm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
   install -Dm 644 README.md -t "$pkgdir/usr/share/doc/$pkgname"
 }
